<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="title">Tip Calculator</string>
    <string name="title_settings">Settings</string>
    <string name="title_default_values">Default Values:</string>
    <string name="settings_title_tip_percentage">Tip Percentage:</string>
    <string name="settings_title_split_bill">Split Bill:</string>
    <string name="settings_title_people">People:</string>
</resources>